# heading-os

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.claude/: settings.README.md  settings.json  settings.local.linux.json  settings.local.macos.json  settings.local.windows.json
.claude/hooks/: _dispatch.py  bridge-hook.py  checkpoint-inject.py  checkpoint-offer.py  checkpoint-save.py  checkpoint-statusline.py  context-monitor.py  data-path-redirect.py  memory-inject.py  memory-reconcile.py  prevent-secrets.py  session-start.py  sync-docs.py
.claude/rules/: classification.md  console-first.md  corporate-docs.md  datastore.md  development-standards.md  documentation.md  hidden-chars.md  humanization.md  lethal-trifecta.md  output-naming.md  prompt-refinement.md  security.md  skill-orchestrator.md  skill-router.md  terminology.md  tiered-risk.md  trace-id.md  visual-design-discipline.md  voice.md  voss.md  vpn-preflight.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dependency-audit.yml
config/: llm_fallback.yaml  memory-index.yaml  routing-map.yaml  tool-risk.json  wizard-questions.yaml
config/schemas/: crm-address-book.schema.json  crm-contact.schema.json  (+1 more)
docs/: ARCHITECTURE.html  ARCHITECTURE.md  DEPLOYMENT.html  DEPLOYMENT.md  EMERGENCY-PROCEDURES.html  EMERGENCY-PROCEDURES.md  EXTENDING.html  EXTENDING.md  INTEGRATIONS-SETUP.html  INTEGRATIONS-SETUP.md  MAKE-IT-YOURS.html  MAKE-IT-YOURS.md  MODELS-SETUP.html  MODELS-SETUP.md  QUICKSTART.html  QUICKSTART.md  SECURITY-MODEL.html  SECURITY-MODEL.md  TELEGRAM-AND-ALERTS.html  TELEGRAM-AND-ALERTS.md  daemons.html  data-structure.html  engine-data-segregation-contract.md  index.html  memory-odin.html  prerequisites.html  skills-mcp-plugins.html
docs/assets/: docs.css
reference/: 31c-docs-light-theme.css  31c-typeface-usage.md  condition-framework-template.md  content-calendar.md  content-performance.md  corporate-style-guide.md  development-checklist.md  editorial-review.md  elicitation-methods.csv  elicitation-methods.md  email-signature-changelog.md  forensic-evidence-grading.md  hidden-characters.md  humanization-banned-vocabulary.md  humanization-empirical-basis.md  market-playbook-template.md  newsletter-guide.md  orchestrator-patterns.md  osint-advanced-toolkit.md  sentinel.service  shell-aliases.md  skill-graph.csv  skill-graph.md  skill-router-compound-patterns.md  state-check-guide.md  visual-design-discipline.md  voss-negotiation.md  vps-deployment-guide.md  workspace-architecture.md  zed-claude-code-windows.md
scripts/: .marp-version  _elevate-and-delete-schtasks.ps1  action-queue-execute.py  action-queue.py  admin-health.py  aggregate-crm.py  artifact-evaluator.py  audit-deps.py  audit-skill-bash-paths.py  bootcamp-org-chart.example.json  bootcamp-roster.py  bridge-adoption-report.py  bridge-daemon.py  browser.py  build_data_repo.py  build_engine_repo.py  calibrate.py  canary-smoke.py  capture-design-exemplars-retry.py  capture-design-exemplars.py  check-build.py  check-preimpl-gate.py  check-skill-router-sync.py  classification-health.py  clear-dep-marker.py  clip.py  cold-sweep.py  cold_sweep_core.py  composite-logo.py  compression-candidates.py  content-denylist.example.yaml  content-guard.py  context-freshness.py  context7.py  convert-to-md.py  council-aggregate.py  council-record-verdict.py  create-data-repo.py  crm-backfill-exchange.py  crm-health.py  (+145 more)
tests/: conftest.py  test_action_queue_endpoints.py  test_action_queue_sync_send.py  test_action_queue_telegram_501.py  test_action_queue_tiers.py  test_alert_no_import_cycle.py  test_alert_routing.py  test_api_load_key_raises.py  test_apply_wizard_answers.py  test_atomic_scripts.py  test_atomic_threads_lib.py  test_atomic_write.py  test_bandit_config.py  test_build_engine.py  test_calibrate_parser.py  test_canary_branch_switch.py  test_capture_payoff.py  test_check_preimpl_gate.py  test_checkpoint_offer.py  test_checkpoint_save.py  test_classification_resolver.py  test_cli_naming.py  test_cold_sweep_routing.py  test_content_guard.py  test_council_aggregate_kimi.py  test_council_prompts.py  test_create_data_repo.py  test_create_data_repo_identity.py  test_crm_autolog.py  test_crm_dormancy.py  test_crm_entity_helpers.py  test_crm_migration.py  test_crm_next.py  test_crm_pipeline_stage.py  test_daemon_heartbeat.py  test_data_config_seam.py  test_data_path_redirect.py  test_data_root.py  test_data_root_intree_warning.py  test_data_root_no_bypass.py  (+105 more)
(+484 files in other folders)
